--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,15 +1,7 @@
 security:
-    encoders:
-        App\Entity\Walid:
-            algorithm: auto
-
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        # used to reload user from session & other features (e.g. switch_user)
-        app_user_provider:
-            entity:
-                class: App\Entity\Walid
-                property: email
+        in_memory: { memory: null }
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
