--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,13 +1,19 @@
 security:
     encoders:
             App\Entity\User:
-                algorithm: bcrypt
+                algorithm: auto
+
     
     providers:
         in_database:
             entity:
                 class: App\Entity\User
                 property: email
+        # used to reload user from session & other features (e.g. switch_user)
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: username
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
