--- a/.env
+++ b/.env
@@ -29,5 +29,5 @@ APP_SECRET=dbde5aad539bb39972a5fad10a70fcd8
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=UTF-8"
 # IMPORTANT: You MUST configure your db driver and server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:root2020@127.0.0.1:3306/dbOfapp
+DATABASE_URL=mysql://root:root2020@127.0.0.1:3306/dbOfappv2
 ###< doctrine/doctrine-bundle ###
